compiler/test/x86/error/proto-arg.c
void procedure(int) {
	int x = 123;
}
